--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "homepage": "https://github.com/FabianNCDev/Node_Basico#readme",
   "dependencies": {
+    "jsreport": "^1.4.0",
     "mime": "^1.3.4",
+    "pdfkit": "^0.8.0",
     "socket.io": "^1.7.1"
   }
 }
